--- a/mi-landing-page/index.html
+++ b/mi-landing-page/index.html
@@ -8,9 +8,7 @@
         content="Miracle Malaquias is a Legal Technician, Data Consultant, and more. Explore professional services and get in touch today!">
     <meta name="keywords"
         content="Legal Services, Data Protection, Music Production, Website Development, Language Teacher">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self';">
-    <meta http-equiv="X-Content-Type-Options" content="nosniff">
-    <meta http-equiv="X-Frame-Options" content="DENY">
+  
     <title>Landing</title>
     <link rel="stylesheet" href="/mi-landing-page/src/pages/index/landing.css" integrity="sha384-..." crossorigin="anonymous">
 </head>
@@ -48,7 +46,7 @@
         <section>
             <h2>About Me</h2>
             <section id="about">
-                <img src="../assets/images/fotoLinkedIn.jpeg" id="about-pic" class="scroll-effect" alt="Portrait of Miracle Malaquias">
+                <img src="/mi-landing-page/assets/images/fotoLinkedIn.jpeg" id="about-pic" class="scroll-effect" alt="Portrait of Miracle Malaquias">
                 <p>Originally from Nigeria and deeply rooted in Spain, I bring a unique blend of African and Iberian
                     cultural experiences. Growing up inspired by the character of Uncle Phil from The Fresh Prince of
                     Bel-Air, a judge who balanced integrity and wisdom, I got graduated in a bachelors degree in Law and
@@ -80,7 +78,7 @@
                 <h3>Legal Technician</h3>
                 <section id="legal-service">
                     <figure>
-                        <img src="../assets/images/legal_services.jpeg" class="scroll-effect" id="legal-service-pic"
+                        <img src="/mi-landing-page/assets/images/legal_services.jpeg" class="scroll-effect" id="legal-service-pic"
                             alt="Legal services support">
                     </figure>
 
@@ -117,7 +115,7 @@
 
                 <section id="data-services">
                     <figure>
-                        <img src="../assets/images/GDPR-Services.jpg" class="scroll-effect" id="data-service-pic"
+                        <img src="/mi-landing-page/assets/images/GDPR-Services.jpg" class="scroll-effect" id="data-service-pic"
                             alt="Data protection and GDPR compliance">
                         <figcaption>Ensure your business complies with GDPR and protects customer data.</figcaption>
                     </figure>
@@ -156,7 +154,7 @@
                 <div id="language-services-container">
                     <video controls width="600" id="language-services-video" class="scroll-effect"
                         alt="language-service">
-                        <source src="../assets/videos/English-Spanish-Teacher.mp4" type="video/mp4">
+                        <source src="/mi-landing-page/assets/videos/English-Spanish-Teacher.mp4" type="video/mp4">
                         Your browser does not support the video tag
                     </video>
 
@@ -193,7 +191,7 @@
 
                 <section id="website-services">
                     <figure>
-                        <img src="../assets/images/websiteDev.webp" class="scroll-effect" id="website-dev-pic"
+                        <img src="/mi-landing-page/assets/images/websiteDev.webp" class="scroll-effect" id="website-dev-pic"
                             alt="Website development">
                         <figcaption>Creating custom websites tailored to your needs.</figcaption>
                     </figure>
@@ -228,10 +226,10 @@
 
                 <section id="music-services">
                     <figure>
-                        <img src="../assets/images/mic-pic.2.PNG" class="scroll-effect" id="music-prod-pic"
+                        <img src="/mi-landing-page/assets/images/mic-pic.2.PNG" class="scroll-effect" id="music-prod-pic"
                             alt="Music production">
 
-                        <img src="../assets/images/studio-pic-2.PNG" class="scroll-effect" id="music-prod-pic-second"
+                        <img src="/mi-landing-page/assets/images/studio-pic-2.PNG" class="scroll-effect" id="music-prod-pic-second"
                             alt="Music production">
                         <figcaption>Helping artists create, distribute, monetize and legally protect their music.
                         </figcaption>
