Proyecto limpio y reestructurado

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         content="Legal Services, Data Protection, Music Production, Website Development, Language Teacher">
   
     <title>Landing</title>
-    <link rel="stylesheet" href="/mi-landing-page/src/pages/index/landing.css" integrity="sha384-..." crossorigin="anonymous">
+    <link rel="stylesheet" href="/src/pages/index/landing.css" integrity="sha384-..." crossorigin="anonymous">
 </head>
 
 <body>
@@ -21,11 +21,11 @@
             gone."-Miracle Malaquias</h3>
         <nav id="nav-bar">
             <ul>
-                <li><a href="/mi-landing-page/index.html">Home</a></li>
-                <li><a href="/mi-landing-page/public/resume.html">Resume</a></li>
-                <li><a href="/mi-landing-page/public/projects.html">Projects</a></li>
-                <li><a href="/mi-landing-page/public/blog.html">Blog</a></li>
-                <li><a href="/mi-landing-page/public/contact.html">Contact</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/public/resume.html">Resume</a></li>
+                <li><a href="/public/projects.html">Projects</a></li>
+                <li><a href="/public/blog.html">Blog</a></li>
+                <li><a href="/public/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -38,7 +38,7 @@
             <p>I am glad you found my personal space! Here, I offer several professional services. With expertise across
                 these fields, I deliver
                 high-quality solutions tailored to your needs. Explore my site to learn more. You can also learn about
-                <a href="resume.html" alt="resume-link" id="my-Carreer">my carreer</a>.—let’s achieve your goals
+                <a href="/public/resume.html" alt="resume-link" id="my-Carreer">my carreer</a>.—let’s achieve your goals
                 together!</p>
         </section>
 
@@ -46,7 +46,7 @@
         <section>
             <h2>About Me</h2>
             <section id="about">
-                <img src="/mi-landing-page/assets/images/fotoLinkedIn.jpeg" id="about-pic" class="scroll-effect" alt="Portrait of Miracle Malaquias">
+                <img src="/assets/images/fotoLinkedIn.jpeg" id="about-pic" class="scroll-effect" alt="Portrait of Miracle Malaquias">
                 <p>Originally from Nigeria and deeply rooted in Spain, I bring a unique blend of African and Iberian
                     cultural experiences. Growing up inspired by the character of Uncle Phil from The Fresh Prince of
                     Bel-Air, a judge who balanced integrity and wisdom, I got graduated in a bachelors degree in Law and
@@ -78,7 +78,7 @@
                 <h3>Legal Technician</h3>
                 <section id="legal-service">
                     <figure>
-                        <img src="/mi-landing-page/assets/images/legal_services.jpeg" class="scroll-effect" id="legal-service-pic"
+                        <img src="assets/images/legal_services.jpeg" class="scroll-effect" id="legal-service-pic"
                             alt="Legal services support">
                     </figure>
 
@@ -102,7 +102,7 @@
                         <p>Save time, reduce stress, and get the support you need—without the high costs of hiring an
                             attorney.</p>
 
-                        <p><strong><a href="contact.html" class="Link-to-contact">Get in touch today</a> and let’s
+                        <p><strong><a href="/public/contact.html" class="Link-to-contact">Get in touch today</a> and let’s
                                 simplify your legal journey!</strong></p>
                     </div>
                 </section>
@@ -115,7 +115,7 @@
 
                 <section id="data-services">
                     <figure>
-                        <img src="/mi-landing-page/assets/images/GDPR-Services.jpg" class="scroll-effect" id="data-service-pic"
+                        <img src="assets/images/GDPR-Services.jpg" class="scroll-effect" id="data-service-pic"
                             alt="Data protection and GDPR compliance">
                         <figcaption>Ensure your business complies with GDPR and protects customer data.</figcaption>
                     </figure>
@@ -141,7 +141,7 @@
                         <p>Stay ahead of legal requirements and protect what matters most—your data and your reputation.
                         </p>
 
-                        <p><strong><a href="contact.html" class="Link-to-contact">Contact me today</a></strong> to
+                        <p><strong><a href="/public/contact.html" class="Link-to-contact">Contact me today</a></strong> to
                             secure your business and build customer trust! 💼</p>
                     </div>
                 </section>
@@ -154,7 +154,7 @@
                 <div id="language-services-container">
                     <video controls width="600" id="language-services-video" class="scroll-effect"
                         alt="language-service">
-                        <source src="/mi-landing-page/assets/videos/English-Spanish-Teacher.mp4" type="video/mp4">
+                        <source src="/assets/videos/English-Spanish-Teacher.mp4" type="video/mp4">
                         Your browser does not support the video tag
                     </video>
 
@@ -177,7 +177,7 @@
                             <p>No matter your level—beginner, intermediate, or advanced—I’ll guide you every step of the
                                 way with practical, engaging lessons.</p>
 
-                            <p><strong><a href="contact.html" class="Link-to-contact">Reach me out.</a> Start your
+                            <p><strong><a href="/public/contact.html" class="Link-to-contact">Reach me out.</a> Start your
                                     language journey today—let’s achieve your goals together!</strong></p>
                         </div>
                     </section>
@@ -191,7 +191,7 @@
 
                 <section id="website-services">
                     <figure>
-                        <img src="/mi-landing-page/assets/images/websiteDev.webp" class="scroll-effect" id="website-dev-pic"
+                        <img src="/assets/images/websiteDev.webp" class="scroll-effect" id="website-dev-pic"
                             alt="Website development">
                         <figcaption>Creating custom websites tailored to your needs.</figcaption>
                     </figure>
@@ -213,7 +213,7 @@
 
                         <p>Let’s create a website that makes your business stand out and drives results!</p>
 
-                        <p><strong><a href="contact.html" class="Link-to-contact">Contact me today</a></strong> to start
+                        <p><strong><a href="/public/contact.html" class="Link-to-contact">Contact me today</a></strong> to start
                             building your online presence!</p>
                     </div>
                 </section>
@@ -226,10 +226,10 @@
 
                 <section id="music-services">
                     <figure>
-                        <img src="/mi-landing-page/assets/images/mic-pic.2.PNG" class="scroll-effect" id="music-prod-pic"
+                        <img src="/assets/images/mic-pic.2.PNG" class="scroll-effect" id="music-prod-pic"
                             alt="Music production">
 
-                        <img src="/mi-landing-page/assets/images/studio-pic-2.PNG" class="scroll-effect" id="music-prod-pic-second"
+                        <img src="/assets/images/studio-pic-2.PNG" class="scroll-effect" id="music-prod-pic-second"
                             alt="Music production">
                         <figcaption>Helping artists create, distribute, monetize and legally protect their music.
                         </figcaption>
@@ -259,7 +259,7 @@
                         <p>Whether you're a seasoned artist or just starting out, I’m here to help you navigate the
                             complexities of the music industry and maximize your music’s potential.</p>
 
-                        <p><strong><a href="contact.html" class="Link-to-contact">Contact us</a> today</strong> to start
+                        <p><strong><a href="/public/contact.html" class="Link-to-contact">Contact us</a> today</strong> to start
                             your music journey and get your music out there!</p>
                     </div>
                 </section>
@@ -279,7 +279,7 @@
             <a href="#terms">Terms and Conditions</a>
         </nav>
     </footer>
-    <script src="/mi-landing-page/src/pages/index/landing.js" defer></script> 
+    <script src="/src/pages/index/landing.js" defer></script> 
 </body>
 
 </html>
