Fix responsive issue with email and update styles

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p>I am glad you found my personal space! Here, I offer several professional services. With expertise across
                 these fields, I deliver
                 high-quality solutions tailored to your needs. Explore my site to learn more. You can also learn about
-                <a href="/public/resume.html" alt="resume-link" id="my-Carreer">my carreer</a>.—let’s achieve your goals
+                <a href="/public/resume.html" alt="resume-link" id="my-Carreer">my career</a>.—let’s achieve your goals
                 together!</p>
         </section>
 
@@ -47,7 +47,7 @@
             <h2>About Me</h2>
             <section id="about">
                 <img src="/assets/images/fotoLinkedIn.jpeg" id="about-pic" class="scroll-effect" alt="Portrait of Miracle Malaquias">
-                <p>Originally from Nigeria and deeply rooted in Spain, I bring a unique blend of African and Iberian
+                <p>Originally from Nigeria but I grew in Spain, I bring a unique blend of African and Iberian
                     cultural experiences. Growing up inspired by the character of Uncle Phil from The Fresh Prince of
                     Bel-Air, a judge who balanced integrity and wisdom, I got graduated in a bachelors degree in Law and
                     Philosophy at Universidad Complutense de Madrid.
@@ -177,7 +177,7 @@
                             <p>No matter your level—beginner, intermediate, or advanced—I’ll guide you every step of the
                                 way with practical, engaging lessons.</p>
 
-                            <p><strong><a href="/public/contact.html" class="Link-to-contact">Reach me out.</a> Start your
+                            <p><strong><a href="/public/contact.html" class="Link-to-contact">Get in touch today.</a> Start your
                                     language journey today—let’s achieve your goals together!</strong></p>
                         </div>
                     </section>
