Actualización: mejoras en estilos, tipografía y sección de contacto

--- a/public/contact.html
+++ b/public/contact.html
@@ -55,7 +55,7 @@
         </nav>
     </footer>
 
-    <script src="../src/pages/contact/contact.js"></script> <!--link to javaScript-->
+    <script src="../src/pages/contact/contact.js"></script>  
 
 </body>
 
