Actualización del proyecto web: cambio del link e email del podcast

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h2>About Me</h2>
             <section id="about">
                 <img src="/assets/images/fotoLinkedIn.jpeg" id="about-pic" class="scroll-effect" alt="Portrait of Miracle Malaquias">
-                <p>Originally from Nigeria but I grew in Spain, I bring a unique blend of African and Iberian
+                <p>Originally from Nigeria but I grew up in Spain, I bring a unique blend of African and Iberian
                     cultural experiences. Growing up inspired by the character of Uncle Phil from The Fresh Prince of
                     Bel-Air, a judge who balanced integrity and wisdom, I got graduated in a bachelors degree in Law and
                     Philosophy at Universidad Complutense de Madrid.
