--- a/public/projects.html
+++ b/public/projects.html
@@ -51,15 +51,16 @@
                 <dl>
                     <dt><strong>YouTube:</strong></dt>
                     <dd id="linkName">
-                        <a href="https://www.youtube.com/channel/UCh9wkr7lDmxY_EMJMbNT_XA" target="_blank" rel="noopener noreferrer">Legalmente-Hablando</a>
+                        <a href="https://www.youtube.com/@DataLeX-o2y" target="_blank" rel="noopener noreferrer">Data LeX</a>
                     </dd>
                 </dl>
+                <P id="podcast-message">Thubs up, get subscribed and share, please</P>
             </article>
 
             <p id="proposal-text">Do you want to propose something? Perhaps, collaborate or participate with us?</p>
 
-            <a href="mailto:contacto.legalmentehablando@gmail.com?subject=Consulta%20sobre%20el%20podcast&body=Hola,%20quisiera%20saber%20más%20sobre..." id="email-podcast">
-                contacto.legalmentehablando@gmail.com
+            <a href="mailto:contact.datalex@gmail.com?subject=Consulta%20sobre%20el%20podcast&body=Hola,%20quisiera%20saber%20más%20sobre..." id="email-podcast">
+                contact.datalex@gmail.com
             </a>
         </section>
     </main>
