Actualización: no pdf con curriculum

--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
                 </p>
                 <p>Fluent in English, French, and Spanish, I thrive in international and diverse settings. I pride
                     myself on being organized, a strong communicator, analytical, and focused on problem-solving. In my
-                    free time, I run a podcast that explores the intersection of Law and Technology and I also record
-                    some music.
+                    free time, I run a podcast that explores the intersection of Law and Technology.
 
                     After acquiring programming skills, I decided to pursue a Master’s Degree in Data Protection in
                     which I'm cucrrently involved, with a particular focus on data
