--- a/public/resume.html
+++ b/public/resume.html
@@ -29,14 +29,15 @@
 
     <main>
         <section>
-            <a href="../assets/documents/Legal Technician-Data Consultant.pdf"
+            <!--<a href="../assets/documents/Legal Technician-Data Consultant.pdf"
                 download="Miracle_Malaquias_Resume.pdf">
                 <div class="container">
                     <button>Download PDF Resume</button>
                 </div>
             </a>
+        -->
             <h2>RESUME</h2>
-        </section>
+        </section> 
 
         <aside>
             <div class="box" onclick="showDetails('workExperience')">
